<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.brotherd.poemtrip.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.brotherd.poemtrip.widget.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:title="@string/register_activity_title" />

        <ImageView
            android:id="@+id/img_top_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/ic_login_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_input">

            <TextView
                android:id="@+id/text_phone_prefix"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:text="@string/phone_prefix"
                android:textColor="@android:color/black" />

            <View
                android:id="@+id/view_split_phone"
                style="@style/Vertical_Line"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/text_phone_prefix" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@+id/view_split_phone"
                android:afterTextChanged="@{viewModel.mobileAfterTextChanged}"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:text="@={viewModel.mobile}"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:onClick="@{()->viewModel.clearMobile()}"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:visibility="@{viewModel.clearMobileVisibility}"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/img_clear_verify_code"
                android:layout_weight="2"
                android:afterTextChanged="@{viewModel.verifyCodeAfterTextChanged}"
                android:background="@null"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:text="@={viewModel.verifyCode}"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_clear_verify_code"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/text_get_verify"
                android:onClick="@{()->viewModel.clearVerifyCode()}"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:visibility="@{viewModel.clearVerifyCodeVisibility}"
                app:srcCompat="@drawable/ic_cancel" />

            <TextView
                android:id="@+id/text_get_verify"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@{viewModel.getVerifyEnable?@color/green:@color/text_gray}"
                android:enabled="@{viewModel.getVerifyEnable}"
                android:gravity="center"
                android:maxLength="16"
                android:maxLines="1"
                android:onClick="@{()->viewModel.getVerifyCode()}"
                android:text="@{viewModel.getVerifyText}"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:background="@color/text_gray" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="@string/send_verify_tip"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginRight="40dp"
                android:afterTextChanged="@{viewModel.passwordAfterTextChanged}"
                android:background="@null"
                android:hint="@string/input_password"
                android:inputType="numberPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:text="@={viewModel.password}"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:onClick="@{()->viewModel.clearPassword()}"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:visibility="@{viewModel.clearPasswordVisibility}"
                app:srcCompat="@drawable/ic_cancel" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@{viewModel.commitEnable?@color/green:@color/alpha_green}"
            android:enabled="@{viewModel.commitEnable}"
            android:gravity="center"
            android:onClick="@{()->viewModel.submit()}"
            android:text="@string/commit"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:background="@color/alpha_green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onCheckedChanged="@{viewModel.checkedChangeListener}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_protocol"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:onClick="@{()->viewModel.seeProtocol()}"
                android:text="@string/register_protocol"
                android:textColor="@color/green"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</layout>

