<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:srcCompat="@drawable/ic_back"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/text_register"
            android:layout_toRightOf="@+id/img_back"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="@string/login"/>

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingRight="12dp"
            android:text="@string/register"
            android:textColor="@color/green"
            android:textSize="18sp"
            tools:text="@string/register"/>

    </RelativeLayout>

    <View
        android:id="@+id/view_split_title"
        style="@style/Horizontal_Line"
        android:layout_below="@+id/rl_title"/>

    <RelativeLayout
        android:id="@+id/rl_login_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_split_title"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/text_account_pwd_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="24dp"
            android:layout_toLeftOf="@+id/view_split_login"
            android:background="@drawable/bg_text_layerlist"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/account_pwd_login"
            android:textColor="@color/text_gray"
            android:textSize="16sp"/>

        <View
            android:id="@+id/view_split_login"
            android:layout_width="1px"
            android:layout_height="1px"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/text_fast_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_toRightOf="@+id/view_split_login"
            android:background="@drawable/bg_text"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/fast_login"
            android:textColor="@color/text_gray"
            android:textSize="16sp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_account_pwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_type"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_input">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                app:srcCompat="@drawable/ic_login_account"/>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                app:srcCompat="@drawable/ic_login_pwd"/>

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fast_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_type"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_input">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:text="@string/phone_prefix"
                android:textColor="@android:color/black"/>

            <View
                style="@style/Vertical_Line"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="6dp"/>

            <EditText
                android:id="@+id/edit_fast_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input">

            <EditText
                android:id="@+id/edit_verify_code"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:background="@null"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_get_verify"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/text_gray"
                android:gravity="center"
                android:maxLength="16"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:text="@string/get_verify_code"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_account_pwd_login"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_text_login"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"/>


</RelativeLayout>
