<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.brotherd.poemtrip.viewmodel.SearchViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#f9f9f9"
            android:paddingBottom="14dp"
            android:paddingTop="14dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:onClick="@{()->viewModel.back()}"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/ic_back_back" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_search">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    app:srcCompat="@drawable/ic_search" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="4dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:text="@string/search"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hot_search"
                        android:layout_marginTop="12dp"
                        android:textSize="14sp" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/tag_hot_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:max_select="1"
                        app:tagData="@{viewModel.hotSearchData}" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history"
                        android:textSize="14sp" />

                    <com.zhy.view.flowlayout.TagFlowLayout
                        android:id="@+id/tag_search_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        app:max_select="1"
                        app:tagData="@{viewModel.searchHistoryData}" />

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>
</layout>

